src/style.css
body {
  margin: 0;
  padding: 22px 32px;
}

.stars {
  display: flex;
}

.stars__star {
  background-image: url(images/star.svg);
  background-size: contain;
  background-repeat: no-repeat;
  width: 16px;
  height: 16px;
  margin-right: 4px;
}

.stars--1 .stars__star:nth-child(-n + 1),
.stars--2 .stars__star:nth-child(-n + 2),
.stars--3 .stars__star:nth-child(-n + 3),
.stars--4 .stars__star:nth-child(-n + 4),
.stars--5 .stars__star:nth-child(-n + 5) {
  background-image: url('images/star-active.svg');
}

